Bug 159741 - Pressing Print button followed by cancel is marked as document modification
Summary: Pressing Print button followed by cancel is marked as document modification
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ModifiedStatus
  Show dependency treegraph
 
Reported: 2024-02-15 20:38 UTC by Telesto
Modified: 2024-06-16 20:55 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-02-15 20:38:43 UTC
Description:
Pressing Print button followed by cancel is marked as document change

Steps to Reproduce:
1. Open attachment 192523 [details]
2. Press CTRL+P
3. Press Cancel
4. Close the document -> Save document dialog appears 

Actual Results:
Document has been modified, requiring save

Expected Results:
Nothing changed


Reproducible: Always


User Profile Reset: No

Additional Info:
Found in
Version: 7.1.8.0.0+ (x64) / LibreOffice Community
Build ID: a94b58277c7aeaa83ce14347cd0b8f7137969d03
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and in
Version: 7.0.7.0.0+ (x64)
Build ID: 626ea4e62a3e5005fe9825923a1c0c5bdb61cc08
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and in
Version: 6.1.6.3
Build ID: 5896ab1714085361c45cf540f76f60673dd96a72
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

and in
Version: 5.2.5.0.0+
Build ID: a4d4fbeb623013f6377b30711ceedb38ea4b49f8
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-2, Time: 2016-12-24_14:43:55
Locale: nl-NL (nl_NL); Calc: CL

fine with
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL
Comment 1 steve 2024-02-15 23:27:01 UTC
Windows only? Can't confirm in Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43d962c27b6efb04d22b05ad8dec08f6056078a0
CPU threads: 8; OS: macOS 13.6.4; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 2 Rafael Lima 2024-02-16 16:58:01 UTC
Repro with

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 12; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.6.4-0ubuntu0.23.10.1
Calc: threaded

However I could not reproduce with any other file.
Comment 3 Bogaboga Man 2024-02-16 20:30:04 UTC
I confirm this bug in 24.2.0.3 Writer and Calc
Comment 4 V Stuart Foote 2024-02-17 02:21:47 UTC
Actually, think this could be correct. Changes are applied against the settings.xml on save.

However, saving and reopening, and then printing -> cancelling-- results in the expected no-change signaled to the UI on subsequent use.

So it is something in this specific ODF archive that gets reset--not necessarily caused by the print / cancel action.

=-testing-=
Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 5 Stéphane Guillou (stragu) 2024-02-28 11:18:40 UTC
First version affected in linux-64-releases bibisect repo is libreoffice-5.0.0.1.
Comment 6 Buovjaga 2024-04-19 06:51:04 UTC
Bibisected with linux-50max to e5ce36800b1669da08ab6440bc2f8bc2bd305ded
assert on attempt to print after cancel
Comment 7 Caolán McNamara 2024-06-15 20:58:23 UTC
https://gerrit.libreoffice.org/c/core/+/168915 should fix this
Comment 8 Commit Notification 2024-06-16 16:05:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/402368f7ed1be95c12a1514e4341cd926e3d5a56

Resolves: tdf#159741 canceling printing results in 'modified' document

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-06-16 20:54:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/28e8907bfb3b87730e7efb3a805dc9e20b08c0f1

Resolves: tdf#159741 canceling printing results in 'modified' document

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-06-16 20:55:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/8ebe12e9921ea84b6f4dcf552618368d4340a100

Resolves: tdf#159741 canceling printing results in 'modified' document

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.