Resolves: tdf#159741 canceling printing results in 'modified' document

Change-Id: I627487a79f819351ec38e34b3fac432c36670d7b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168933
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>